{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 58,
  "lineage": "9bd3124e-a49e-01b8-3bef-2d5a491ab73e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01208acde778cb4e1",
            "domain": "vpc",
            "id": "eipalloc-01208acde778cb4e1",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-197-44-163.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.197.44.163",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c1a891d1b239baa",
            "domain": "vpc",
            "id": "eipalloc-04c1a891d1b239baa",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-199-47-109.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.199.47.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:internet-gateway/igw-0c7b7fb961c0aad63",
            "id": "igw-0c7b7fb961c0aad63",
            "owner_id": "179862215516",
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01208acde778cb4e1",
            "connectivity_type": "public",
            "id": "nat-03bbcb6fec19879d4",
            "network_interface_id": "eni-00464a9528056a55d",
            "private_ip": "10.0.1.38",
            "public_ip": "52.197.44.163",
            "subnet_id": "subnet-078cc849d8890c15a"
          },
          "dependencies": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c1a891d1b239baa",
            "connectivity_type": "public",
            "id": "nat-007a1c258eb9ed632",
            "network_interface_id": "eni-00744897820f5fe59",
            "private_ip": "10.0.2.158",
            "public_ip": "54.199.47.109",
            "subnet_id": "subnet-01f563a4b826145c2"
          },
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c11b9f986c21071b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03bbcb6fec19879d4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c11b9f986c21071b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_nat_gateway.nat_gateway_0",
            "aws_route_table.private_0",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-010c1bb82bb414fe81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-007a1c258eb9ed632",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010c1bb82bb414fe8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_1",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c7b7fb961c0aad63",
            "id": "r-rtb-06307858b042722331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06307858b04272233",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_route_table.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:route-table/rtb-0c11b9f986c21071b",
            "id": "rtb-0c11b9f986c21071b",
            "owner_id": "179862215516",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:route-table/rtb-010c1bb82bb414fe8",
            "id": "rtb-010c1bb82bb414fe8",
            "owner_id": "179862215516",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:route-table/rtb-06307858b04272233",
            "id": "rtb-06307858b04272233",
            "owner_id": "179862215516",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0862621d5f059db77",
            "route_table_id": "rtb-0c11b9f986c21071b",
            "subnet_id": "subnet-00492388219fc589c"
          },
          "dependencies": [
            "aws_route_table.private_0",
            "aws_subnet.private_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07141a351edb8ac7b",
            "route_table_id": "rtb-010c1bb82bb414fe8",
            "subnet_id": "subnet-001d6a5e0c8e653d7"
          },
          "dependencies": [
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092d88859889d90e0",
            "route_table_id": "rtb-06307858b04272233",
            "subnet_id": "subnet-078cc849d8890c15a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d95d053110da255d",
            "route_table_id": "rtb-06307858b04272233",
            "subnet_id": "subnet-01f563a4b826145c2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:subnet/subnet-00492388219fc589c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00492388219fc589c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179862215516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:subnet/subnet-001d6a5e0c8e653d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001d6a5e0c8e653d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179862215516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:subnet/subnet-078cc849d8890c15a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078cc849d8890c15a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179862215516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:subnet/subnet-01f563a4b826145c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f563a4b826145c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179862215516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:vpc/vpc-0a2664b971141b39b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05be04796a3b2928f",
            "default_route_table_id": "rtb-024e69c0417de6d69",
            "default_security_group_id": "sg-00d5c4f150de5748b",
            "dhcp_options_id": "dopt-c34b5aa4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a2664b971141b39b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024e69c0417de6d69",
            "owner_id": "179862215516",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          }
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:179862215516:security-group/sg-048d0580f977dbee3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-048d0580f977dbee3",
            "ingress": [],
            "name": "module-sg",
            "name_prefix": "",
            "owner_id": "179862215516",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a2664b971141b39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2244184724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-048d0580f977dbee3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2450856052",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048d0580f977dbee3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.example_sg.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}